<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="settings">Settings</string>
    <string name="settings_error">Settings Error</string>

    <string name="btnUpcomingElectionsTxt">UPCOMING ELECTIONS</string>
    <string name="btnFindMyRepresentativesTxt">FIND MY REPRESENTATIVES</string>
    <string name="location_required_error">Location must be enabled</string>
    <string name="foreground_location_permission_required">Grant foreground location permission to the app to get your position.</string>

    <string name="upcomingElections">Upcoming Elections</string>
    <string name="savedElections">Saved Elections</string>

    <string name="api_error">Could not get Data from Civic.</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="correspondance_address">Correspondance Address</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="representative_search">Representative Search</string>
    <string name="my_representatives">My Representatives</string>
    <string name="use_my_location">Use My Location</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>

    <string name="errTxtAddressInvalid">Please enter a valid address.</string>
    <string name="errTxtGetLocationFailed">Failed to get location!</string>

    <string name="representativeProfilePicture">Representative Profile Picture</string>
    <string name="www_icon">www-Icon</string>
    <string name="facebook_icon">Facebook-Icon</string>
    <string name="twitter_icon">Twitter-Icon</string>

</resources>
