<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/tvRepresentativeSearchTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/representative_search"
            android:textSize="@dimen/header_size_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/etAddressLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="postalAddress"
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRepresentativeSearchTitle" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/etAddressLine2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:hint="@string/address_line_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddressLine1" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/etCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:hint="@string/city"
            app:layout_constraintEnd_toStartOf="@id/spinnerState"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddressLine2" />

        <!-- TODO: Add default values from provided resources  -->
        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinnerState"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/etCity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etCity"
            app:layout_constraintTop_toTopOf="@id/etCity"
            selectedSpinnerItem="@={viewModel.selectedUsState}"
            spinnerItems="@{viewModel.usStates}"
            android:layout_marginStart="@dimen/default_margin"
             />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/etZip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="postalCode"
            android:inputType="number"
            android:maxLength="5"
            android:hint="@string/zip"
            app:layout_constraintEnd_toEndOf="@id/etCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCity" />

        <!-- TODO: Add visual styling and label -->
        <Button
            android:id="@+id/btnFindMyRepresentative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:background="@drawable/button_rounded"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/find_my_representatives"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/etZip" />

        <!-- TODO: Add visual styling and content -->
        <Button
            android:id="@+id/btnUseMyLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/btn_margin"
            android:background="@drawable/button_rounded"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/use_my_location"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btnFindMyRepresentative" />

        <View
            android:id="@+id/horizontalLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnUseMyLocation"
            android:layout_margin="@dimen/default_margin"/>
        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/tvMyRepresentativesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_representatives"
            android:textSize="@dimen/header_size_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

        <!-- TODO: Add Representatives RecyclerView -->

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMyRepresentativesTitle"
            motion:visibilityMode="ignore" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>